[metadata]
name = adams
version = 0.1.0
author = Alexandre Ribeiro
author_email = engribeiroale@gmail.com
description = A package for the analysis of gears with the AGMA Standard
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/ribeiroale/adams
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9